tests/sksl/errors/UndeclaredFunction.glsl
### Compilation failed:

error: 1: unknown identifier 'foo'
1 error
